fix blog card tag list overflow

--- a/styles/Card.module.scss
+++ b/styles/Card.module.scss
@@ -131,6 +131,9 @@
 
   .tagListContainer {
     display: flex;
+    flex-wrap: wrap;
+    max-height: 12rem;
+    overflow: hidden;
     gap: 0.5rem;
     margin-bottom: -1rem;
   }
